AlgorithmTest/src/communication/error.txt
rm: cannot remove `*.class': No such file or directory
Pilot.java:10: error: package gnu.io does not exist
import gnu.io.*;
^
Pilot.java:162: error: cannot find symbol
    System.out.println(CommPortIdentifier.getPortIdentifiers());
                       ^
  symbol:   variable CommPortIdentifier
  location: class Pilot
Pilot.java:164: error: cannot find symbol
     CommPortIdentifier.addPortName(portName, CommPortIdentifier.PORT_SERIAL, null);
                                              ^
  symbol:   variable CommPortIdentifier
  location: class Pilot
Pilot.java:164: error: cannot find symbol
     CommPortIdentifier.addPortName(portName, CommPortIdentifier.PORT_SERIAL, null);
     ^
  symbol:   variable CommPortIdentifier
  location: class Pilot
Pilot.java:166: error: cannot find symbol
    CommPortIdentifier portIdentifier = CommPortIdentifier
    ^
  symbol:   class CommPortIdentifier
  location: class Pilot
Pilot.java:166: error: cannot find symbol
    CommPortIdentifier portIdentifier = CommPortIdentifier
                                        ^
  symbol:   variable CommPortIdentifier
  location: class Pilot
Pilot.java:175: error: cannot find symbol
      SerialPort commPort = (SerialPort) portIdentifier.open( "", timeout);
      ^
  symbol:   class SerialPort
  location: class Pilot
Pilot.java:175: error: cannot find symbol
      SerialPort commPort = (SerialPort) portIdentifier.open( "", timeout);
                             ^
  symbol:   class SerialPort
  location: class Pilot
Pilot.java:178: error: cannot find symbol
      if( commPort instanceof SerialPort ) {
                              ^
  symbol:   class SerialPort
  location: class Pilot
Pilot.java:179: error: cannot find symbol
        SerialPort serialPort = commPort;
        ^
  symbol:   class SerialPort
  location: class Pilot
Pilot.java:182: error: cannot find symbol
                                        SerialPort.DATABITS_8,
                                        ^
  symbol:   variable SerialPort
  location: class Pilot
Pilot.java:183: error: cannot find symbol
                                        SerialPort.STOPBITS_1,
                                        ^
  symbol:   variable SerialPort
  location: class Pilot
Pilot.java:184: error: cannot find symbol
                                        SerialPort.PARITY_NONE );
                                        ^
  symbol:   variable SerialPort
  location: class Pilot
13 errors
